[package]
name = "FeXun"
edition = "2024"
version = "0.0.0-placeholder"
categories = [
    "game-engines",
    "games",
    "graphics",
    "game-development",
    "rendering",
]
keywords = ["fexun", "engine", "visual-novel", "storytelling"]
homepage = "https://fexunengine.rs"
repository = "https://github.com/fexunengine/fexun-rs"
documentation = "https://docs.fexunengine.rs"
license = "MIT OR Apache-2.0"
authors = ["fexunengine"]
