[package]
name = "fexun-core"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
