[package]
name = "fexun-runtime"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]
name = "fexun_runtime"

[dependencies]
fexun-core = { path = "../fexun-core" }
