[package]
name = "fexun-logging"
version = "0.0.0-placeholder"
description = "Logging utilities for the fexun engine"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytesize = "2.0.1"
pollster = "0.4.0"
sysinfo = "0.35.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgpu = { workspace = true }
