[package]
name = "fexun-renderer"
version = "0.0.0-placeholder"
description = "Placeholder for the 'fexun-renderer' crate of the fexun engine"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace Dependencies
wgpu = { workspace = true }
winit = { workspace = true }

# External Dependencies
env_logger = "0.11.8"
