[package]
name = "fexun-sprites"
version = "0.0.0-placeholder"
description = "Placeholder for the 'fexun-sprites' crate of the fexun engine"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
