[package]
name = "fexun-winit"
version = "0.0.0-placeholder"
description = "Placeholder for the 'fexun-winit' crate of the fexun engine"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal Dependencies
fexun-renderer = { path = "../fexun-renderer" }

# Workspace Dependencies
winit = { workspace = true }

# External Dependencies
pollster = "0.4.0"
