[package]
name = "fexun"
version = "0.0.0-placeholder"
description = "Placeholder for the 'fexun' crate of the fexun engine"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# fexun-animation = { workspace = true }
# fexun-audio = { workspace = true }
# fexun-renderer = { workspace = true }
# fexun-sprites = { workspace = true }
# fexun-types = { workspace = true }
# fexun-ui = { workspace = true }
fexun-winit = { workspace = true }
# fexun-assets = { workspace = true }
fexun-logging = { workspace = true }
